--- a/startupweekendnantes.fr/src/components/Welcome.css
+++ b/startupweekendnantes.fr/src/components/Welcome.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  overflow: hidden;
+  overflow: visible;
   background: rgb(0, 0, 0);
   height: 600px;
 }
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center top;
+  object-position: center center;
 }
 
 .welcome-overlay {
@@ -37,11 +37,11 @@
   height: 600px;
   max-width: 1240px;
   width: 100%;
-  padding: 50px 20px 30px;
+  padding: 0px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 50px;
+  gap: 10px;
   box-sizing: border-box;
 }
 
@@ -58,7 +58,7 @@
   font-family: 'Oxanium', sans-serif;
   font-size: 18px;
   color: rgb(255, 255, 255);
-  max-width: 560px;
+
   line-height: 1.6;
   margin: 0;
 }
